--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource settings: set here your own configurations for the database 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/udemy-mysql-db?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=andre
-spring.datasource.password=12345
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/udemy-mysql-db?useTimezone=true&serverTimezone=UTC
+spring.datasource.username = andre
+spring.datasource.password = 12345
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -21,3 +21,10 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+# Flyway configs
+flyway.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/
+flyway.db = udemy-mysql-db
+flyway.user = andre
+flyway.password = 12345
