--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,11 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-
 # Flyway configs
 flyway.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/
 flyway.db = udemy-mysql-db
 flyway.user = andre
 flyway.password = 12345
+
+# Jackson configs
+spring.jackson.default-property-inclusion=non-null
