JWT implementation done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ flyway.password = 12345
 
 # Jackson configs
 spring.jackson.default-property-inclusion=non-null
+
+# Security
+# security.jwt.token.secret-key = secret
+# security.jwt.token.expire-lenght = 3600000
