--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.jackson.default-property-inclusion=non-null
 # Security
 # security.jwt.token.secret-key = secret
 # security.jwt.token.expire-lenght = 3600000
+
+# Devtools configs
+spring.devtools.restart.enabled = false
