--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,12 @@ spring.jackson.default-property-inclusion=non-null
 
 # Devtools configs
 spring.devtools.restart.enabled = false
+
+# Upload/download configs
+spring.servlet.multipart.enabled = true
+spring.servlet.multipart.file-size-threshold = 2KB
+spring.servlet.multipart.max-file-size = 200MB
+spring.servlet.multipart.max-request-size = 215MB
+
+# Storage configs
+file.upload-dir = C:/Users/andre/Downloads/rest-with-springboot-udemy-uploadDir/
