--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource settings: set here your own configurations for the database 
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/udemy-mysql-db?useTimezone=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://db:3306/udemy-mysql-db?useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = andre
 spring.datasource.password = 12345
 
@@ -23,7 +23,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Flyway configs
-flyway.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/
+flyway.url = jdbc:mysql://db:3306/
 flyway.db = udemy-mysql-db
 flyway.user = andre
 flyway.password = 12345
