--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource settings: set here your own configurations for the database 
-spring.datasource.url = jdbc:mysql://db:3306/udemy-mysql-db?useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://restwithspringbootudemy.caimv9usw0dg.eu-west-2.rds.amazonaws.com:3306/udemy_mysql_db?useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = andre
-spring.datasource.password = 12345
+spring.datasource.password = 12345678
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -23,10 +23,10 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Flyway configs
-flyway.url = jdbc:mysql://db:3306/
-flyway.db = udemy-mysql-db
+flyway.url = jdbc:mysql://restwithspringbootudemy.caimv9usw0dg.eu-west-2.rds.amazonaws.com:3306/
+flyway.db = udemy_mysql_db
 flyway.user = andre
-flyway.password = 12345
+flyway.password = 12345678
 
 # Jackson configs
 spring.jackson.default-property-inclusion=non-null
