--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,19 +26,16 @@ services:
     networks: 
       - udemy-networks
   rest-with-springboot-udemy:
-    image: andrecaiado/rest-with-springboot-udemy
+    image: rest-with-springboot-udemy
     restart: always
     build: .
     working_dir: /RestWithSpringBootUdemy
     environment:
       TZ: Europe/Lisbon
       SPRING_BOOT_ENVIRONMENT: Production
-    volumes:
-      - .:/RestWithSpringBootUdemy
-      - ~/.m2:/root/.m2
     ports:
       - "8080:8080"
-    command: mvn clean spring-boot:run
+    command: mvn spring-boot:run
     links:
       - db
     depends_on:
