--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ phyton:
     - "3.6"
 services: docker
 before_install:
+    - chmod +x mvnw
     - sudo apt-get update
     - mvn clean package
 script:
