--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: bionic
 language: java
 jdk:
     - oraclejdk13
-phyton:
+python:
     - "3.6"
 services: docker
 before_install:
@@ -15,7 +15,7 @@ script:
     - docker-compose build
 before_deploy:
     - echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
--deploy:
+deploy:
     provider: script
     script: 
         docker tag rest-with-springboot-udemy:latest andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID
