--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,12 @@ before_deploy:
 deploy:
     provider: script
     script: 
-        docker tag rest-with-springboot-udemy:latest andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID
+        docker tag rest-with-springboot-udemy:latest andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID;
         docker push andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID;
     on:
-        branch: master
+        branches: 
+            - master
+            - develop
 after_success:
     - sudo apt-get -y install python3-pip python-dev
     - sudo pip3 install -U setuptools
