--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,7 @@ deploy:
         docker tag rest-with-springboot-udemy:latest andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID;
         docker push andrecaiado/rest-with-springboot-udemy:$TRAVIS_JOB_ID;
     on:
-        branches: 
-            - master
-            - develop
+        all_branches: true
 after_success:
     - sudo apt-get -y install python3-pip python-dev
     - sudo pip3 install -U setuptools
